@@ -436,10 +436,10 @@ enum {
   XTerm_Color00          = 10,      // not implemented, CLASH!
   XTerm_Color01          = 11,      // not implemented
   XTerm_Color_cursor     = 12,      // change actual 'Cursor' color
-  XTerm_Color_pointer_fg = 13,      // change actual 'Pointer' color
-  XTerm_Color_pointer_bg = 14,      // not implemented
-  XTerm_Color05          = 15,      // not implemented
-  XTerm_Color06          = 16,      // not implemented
+  XTerm_Color_pointer_fg = 13,      // change actual 'Pointer' fg color
+  XTerm_Color_pointer_bg = 14,      // change actual 'Pointer' bg color
+  XTerm_Color05          = 15,      // not implemented (tektronix fg)
+  XTerm_Color06          = 16,      // not implemented (tektronix bg)
   XTerm_Color_RV         = 17,      // change actual 'Highlight' color
   XTerm_logfile          = 46,      // not implemented
   XTerm_font             = 50,
@@ -449,18 +449,21 @@ enum {
   XTerm_emacs51          = 51,      // reserved for emacs shell
   /*
    * rxvt extensions of XTerm OSCs: ESC ] Ps;Pt (ST|BEL)
+   * at least Rxvt_Color_BD and Rxvt_Color_UL clash with xterm
    */
-  XTerm_Color_BD         = 18,      // change actual 'Bold' color
-  XTerm_Color_UL         = 19,      // change actual 'Underline' color
-  XTerm_Pixmap           = 20,      // new bg pixmap
-  XTerm_restoreFG        = 39,      // change default fg color
-  XTerm_restoreBG        = 49,      // change default bg color
-  XTerm_dumpscreen       = 55,      // dump scrollback and all of screen
+  Rxvt_Color_BD          = 18,      // change actual 'Bold' color
+  Rxvt_Color_UL          = 19,      // change actual 'Underline' color
+  Rxvt_Pixmap            = 20,      // new bg pixmap
+  Rxvt_restoreFG         = 39,      // change default fg color
+  Rxvt_restoreBG         = 49,      // change default bg color
+  Rxvt_dumpscreen        = 55,      // dump scrollback and all of screen
 
   URxvt_locale           = 701,     // change locale
   URxvt_Menu             = 703,     // set menu item
   URxvt_Color_IT         = 704,     // change actual 'Italic' colour
   URxvt_Color_tint       = 705,     // change actual tint colour
+  URxvt_Color_BD         = 706,
+  URxvt_Color_UL         = 707,
 
   URxvt_font             = 710,
   URxvt_boldFont         = 711,
